<resources>
    <string name="appName">Getting Air</string>    <!-- Getting Air -->
    <string name="menuPlay">""</string>                   <!-- Play -->
    <string name="localBoard">""</string>    <!-- Local Leaderboard -->
    <string name="globalBoard">""</string>  <!-- Global Leaderboard -->
    <string name="menuPref">""</string>            <!-- Preferences -->
    <string name="achievments">""</string>  <!-- Achievements(test) -->
    <string name="exit">""</string>                       <!-- Exit -->
    <string name="backOption">Back</string>
    <string name="prefTitle">Preferences</string>
    <string name="optNoShare">"Don't share score"</string>
    <string name="signInGenericError">Failed Google Play sign-in</string>
</resources>
